--- a/_config.yml
+++ b/_config.yml
@@ -193,6 +193,11 @@ exclude:
   - readme_preview/
   - vendor
   - _pages/profiles.md
+  - _pages/blog.md
+  - _pages/projects.md
+  - _pages/repositories.md
+  - _pages/teaching.md
+  - _pages/dropdown.md
 keep_files:
   - CNAME
   - .nojekyll
